--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "look-and-say",
-  "version": "1.0.0",
-  "description": "codecheck challenge",
-  "scripts": {
-    "test": "mocha"
+  "name" : "look-and-say",
+  "version" : "1.0.0",
+  "description" : "codecheck challenge",
+  "scripts" : {
+    "test" : "mocha"
   },
-  "author": "Givery",
-  "devDependencies": {
-    "codecheck": "^0.5.6",
-    "chai": "^3.5.0"
+  "author" : "Givery",
+  "devDependencies" : {
+    "chai" : "^3.5.0",
+    "codecheck" : "^0.5.6"
   }
 }
